[gd_scene load_steps=11 format=3 uid="uid://mkti1j6kmqnc"]

[ext_resource type="Script" uid="uid://bl0tyi6ba1lqi" path="res://scripts/main_menu_ui.gd" id="1_igg4x"]
[ext_resource type="Theme" uid="uid://bgi1he5teq16t" path="res://assets/Low_Poly_Theme.tres" id="1_k77ga"]
[ext_resource type="FontFile" uid="uid://c0hg4c5mw1sgw" path="res://assets/fonts/Nano/nano-sharp.ttf" id="2_k77ga"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k77ga"]
bg_color = Color(0.5390085, 0.5970619, 0.7511446, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_igg4x"]
bg_color = Color(0.5372549, 0.59607846, 0.7529412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8r3tg"]
bg_color = Color(0.93793225, 0.91520673, 0.91450685, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxx40"]
bg_color = Color(0.3561708, 0.59560484, 0.9712159, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qw3ch"]
bg_color = Color(0.5372549, 0.59607846, 0.7529412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ex4l"]
bg_color = Color(0.5372549, 0.59607846, 0.7529412, 1)

[sub_resource type="FontVariation" id="FontVariation_n6prh"]

[node name="MainMenuUI" type="CanvasLayer"]
script = ExtResource("1_igg4x")
metadata/_edit_horizontal_guides_ = [651.0]

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -550.5
offset_top = 18.0
offset_right = 340.5
offset_bottom = 144.0
grow_horizontal = 2
theme = ExtResource("1_k77ga")
theme_override_fonts/font = ExtResource("2_k77ga")
theme_override_font_sizes/font_size = 72
text = "Space Sandbox"

[node name="Buttons" type="VBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -425.0
offset_top = -319.0
offset_right = -49.0
offset_bottom = -51.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 14
alignment = 2

[node name="StartButton" type="Button" parent="Buttons"]
layout_mode = 2
theme = ExtResource("1_k77ga")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_k77ga")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_k77ga")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_igg4x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8r3tg")
theme_override_styles/hover = SubResource("StyleBoxFlat_oxx40")
text = "Start"

[node name="InstructionsButton" type="Button" parent="Buttons"]
layout_mode = 2
theme = ExtResource("1_k77ga")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.232032, 0.5102242, 0.69470084, 1)
theme_override_colors/icon_hover_color = Color(0.76240367, 0.76240367, 0.76240367, 1)
theme_override_fonts/font = ExtResource("2_k77ga")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_qw3ch")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8r3tg")
theme_override_styles/hover = SubResource("StyleBoxFlat_oxx40")
text = "Instructions"

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme = ExtResource("1_k77ga")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.232032, 0.5102242, 0.69470084, 1)
theme_override_colors/icon_hover_color = Color(0.76240367, 0.76240367, 0.76240367, 1)
theme_override_fonts/font = ExtResource("2_k77ga")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_2ex4l")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8r3tg")
theme_override_styles/hover = SubResource("StyleBoxFlat_oxx40")
text = "Exit"

[node name="Team" type="Label" parent="."]
offset_left = 10.0
offset_top = 618.0
offset_right = 177.0
offset_bottom = 641.0
theme = ExtResource("1_k77ga")
theme_override_fonts/font = SubResource("FontVariation_n6prh")
text = "Interstellar Makeover"

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
